@@ -4,7 +4,7 @@
 
 use Gtk2::TestHelper
 	at_least_version => [2, 4, 0, 'GtkIconTheme is new in 2.4'],
-	tests => 16;
+	tests => 18;
 
 my $icon_theme = Gtk2::IconTheme->new;
 isa_ok ($icon_theme, 'Gtk2::IconTheme');
@@ -58,6 +58,16 @@ SKIP: {
 		unless (@sizes);
 
 	like ($sizes[0], qr/^\d+$/);
+}
+
+SKIP: {
+	skip 'new 2.12 stuff', 2
+		unless Gtk2->CHECK_VERSION (2, 11, 0); # FIXME: 2.12
+
+	ok (defined $icon_theme->list_contexts);
+
+	my $info = $icon_theme->choose_icon (['gtk-bla', 'gtk-cancel'], 24, 'use-builtin');
+	isa_ok ($info, 'Gtk2::IconInfo');
 }
 
 my @paths = qw(/tmp /etc /home);
